[package]
name = "employee"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
common = { path = "../common" }
config = { path = "../config" }
tokio = { version = "1.42.0", features = ["full"] }
sea-orm = { version = "1.1.2", features = ["sqlx-mysql", "runtime-tokio", "macros"]}
